--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "format": "prettier --write --plugin-search-dir=. .",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.39",
@@ -25,6 +26,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
     "flowbite-svelte": "^0.23.3",
+    "husky": "^8.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.13",
